[gd_scene load_steps=8 format=2]

[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=1]
[ext_resource path="res://Scenes/Maquina/CraftItemUI.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Resources/Papel.tres" type="Resource" id=4]
[ext_resource path="res://Resources/Vidro.tres" type="Resource" id=5]
[ext_resource path="res://Resources/Plastico.tres" type="Resource" id=6]
[ext_resource path="res://Resources/Metal.tres" type="Resource" id=7]

[node name="CraftItemUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_default_cursor_shape = 2
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
nome = NodePath("Content/NomeIcon/Name")
icon = NodePath("Content/NomeIcon/Icon")
description = NodePath("Content/Description")
player_state = ExtResource( 1 )
recursos = [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ]

[node name="Content" type="HBoxContainer" parent="."]
margin_right = 900.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomeIcon" type="VBoxContainer" parent="Content"]
margin_right = 100.0
margin_bottom = 600.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Content/NomeIcon"]
margin_top = 239.0
margin_right = 100.0
margin_bottom = 270.0
text = "Espada do  Rei Desnutrido"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Content/NomeIcon"]
margin_left = 15.0
margin_top = 290.0
margin_right = 85.0
margin_bottom = 360.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Content"]
margin_left = 120.0
margin_top = 293.0
margin_right = 718.0
margin_bottom = 307.0
size_flags_horizontal = 3
text = "O rei desnutrido não tinha mais forças pra carregar suas espada."
valign = 1
autowrap = true

[node name="Recursos" type="GridContainer" parent="Content"]
margin_left = 738.0
margin_top = 255.0
margin_right = 900.0
margin_bottom = 345.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 30
columns = 2

[node name="Papel" type="HBoxContainer" parent="Content/Recursos"]
margin_right = 66.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Content/Recursos/Papel"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Cost" type="Label" parent="Content/Recursos/Papel"]
margin_left = 50.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "50"

[node name="Plastico" type="HBoxContainer" parent="Content/Recursos"]
margin_left = 96.0
margin_right = 162.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Content/Recursos/Plastico"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true

[node name="Cost" type="Label" parent="Content/Recursos/Plastico"]
margin_left = 50.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "30"

[node name="Metal" type="HBoxContainer" parent="Content/Recursos"]
margin_top = 50.0
margin_right = 66.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Content/Recursos/Metal"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Cost" type="Label" parent="Content/Recursos/Metal"]
margin_left = 50.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "32"

[node name="Vidro" type="HBoxContainer" parent="Content/Recursos"]
margin_left = 96.0
margin_top = 50.0
margin_right = 162.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Content/Recursos/Vidro"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Cost" type="Label" parent="Content/Recursos/Vidro"]
margin_left = 50.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "32"

[connection signal="focus_entered" from="." to="." method="_on_CraftItemUI_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_CraftItemUI_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_CraftItemUI_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CraftItemUI_mouse_exited"]
